:bug: fix portfolio gamescreen whitespace issue

--- a/resources/scss/components/_portfolio.scss
+++ b/resources/scss/components/_portfolio.scss
@@ -1,6 +1,6 @@
 .portfolio{
     &__container{
-        margin: 10px auto 0 auto;
+        margin: 135px auto -125px auto;
         width: fit-content;
         
         #gameScreen{
